# egglog-language-server

./: .gitignore  Cargo.toml  README.md  extension.js  package-lock.json  package.json
egglog-language-server/: Cargo.toml
egglog-language-server/src/: main.rs  src_tree.rs
examples/: path.egg
src/: main.rs  src_tree.rs
syntaxes/: eggsmol.tmLanguage.json
tree-sitter-egglog/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-egglog/bindings/c/: tree-sitter-egglog.h  tree-sitter-egglog.pc.in
tree-sitter-egglog/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-egglog/bindings/node/: binding.cc
tree-sitter-egglog/bindings/python/tree_sitter_egglog/: __init__.py  binding.c
tree-sitter-egglog/bindings/rust/: lib.rs
tree-sitter-egglog/src/: grammar.json  node-types.json  parser.c
