[package]
name = "egglog-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter-egglog = { path = "../tree-sitter-egglog" }
tree-sitter = "0.21.0"
tree-sitter-highlight = "0.21.0"
dashmap = "5.5.1"
anyhow = "1.0.75"
